--- a/docker/Dockerfile.ui
+++ b/docker/Dockerfile.ui
@@ -19,5 +19,8 @@ COPY . .
 # Expose the Streamlit port
 EXPOSE 8501
 
+# Make sure Python can find modules in the current directory
+ENV PYTHONPATH=/app
+
 # Command to run the UI
 CMD ["streamlit", "run", "ui/app.py", "--server.port=8501", "--server.address=0.0.0.0"] 
